--- a/scoreboard.html
+++ b/scoreboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -11,7 +11,6 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-
 <!--Navigation bar-->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -19,9 +18,9 @@
             <a class="navbar-brand" href="index.html">MalMal</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li ><a href="index.html">Home</a></li>
             <li><a href="malmal.html">MalMal</a></li>
-            <li><a href="scoreboard.html">Scoreboard</a></li>
+            <li class="active"><a href="scoreboard.html">Scoreboard</a></li>
             <li><a href="submit-word.html">Wort einreichen</a></li>
         </ul>
     </div>
@@ -29,15 +28,12 @@
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container">
-    <h3>Basic Navbar Example</h3>
-    <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-</div>
+
 <!--site content end-->
 
 <footer class="footer">
     <div class="container">
-        <p>Toller  Footer</p>
+        <span class="text-muted">Place sticky footer content here.</span>
     </div>
 </footer>
 </body>
