Welcome site with pictures added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
 
 <!--site content start-->
 <div class="container">
-    <h3>Basic Navbar Example</h3>
-    <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+    <h3>Kerninformatiker&#8482</h3>
+    <p>Das sind Sascha und Philipp, oder eben alle die mit uns zusammenarbeiten, denn wer sich Kerninformatiker
+    nennen will muss ordentlich Lizenzgebühren blechen!</p>
+    <table cellspacing="10">
+        <tr>
+            <th><img src="img/sascha.jpg" class="img-rounded" alt="Cinque Terre"></th>
+            <th><img src="img/philipp.jpg" class="img-rounded" alt="Cinque Terre"></th>
+        </tr>
+    </table>
+
+
 </div>
 <!--site content end-->
 
