-Optimized css of navbar and footer -Added content.css for design of site content -Changed container size to fit more info on screen -Optimized picture grid of welcome site

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
 
-        html {
+        html, a{
             color: #888;
             display: table;
             font-family: sans-serif;
@@ -55,8 +55,11 @@
     </style>
 </head>
 <body>
-    <h1>Seite nicht gefunden</h1>
-    <p>Sorry, irgendwas doofes ist passiert und wir finden die Seite nicht. &#9785;</p>
+    <h1>404 Seite nicht gefunden</h1>
+    <p>Sorry, irgendwas doofes ist passiert und wir finden die Seite nicht. &#9785;
+        <br>
+        <br>
+        <a href="index.html">Zurück nach Hause</a></p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
