--- a/malmal.html
+++ b/malmal.html
@@ -13,7 +13,7 @@
 <body>
 <!--Navigation bar-->
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="index.html">MalMal</a>
         </div>
@@ -33,7 +33,7 @@
 
 <footer class="footer">
     <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
 </body>
