--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -36,20 +36,15 @@
         nennen will muss ordentlich Lizenzgebühren blechen!</p>
     <br>
     <!--picture grid start-->
-    <div class="row form-group">
-        <div class="col-md-6 form-group">
-            <div class="col-md-12 form-group">
-                <img src="img/sascha.jpg" class="img-rounded img-responsive gap-right" alt="Cinque Terre">
+        <div class="row">
+            <div class="col-xs-4">
+                <img src="img/sascha.jpg" class="img-rounded img-responsive gap-right im" alt="Sascha">
+            </div>
+            <div class="col-xs-4">
+                <img src="img/philipp.jpg" class="img-rounded img-responsive" alt="Philipp">
             </div>
         </div>
-        <div class="col-md-6 form-group">
-            <div class="col-md-12 form-group">
-                <img src="img/philipp.jpg" class="img-rounded img-responsive" alt="Cinque Terre">
-            </div>
-        </div>
-    </div>
     <!--picture grid end-->
-
 </div>
 <!--site content end-->
 
