consolidated css files into bootstrap-override.css and

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="css/navbar.css" rel="stylesheet">
-    <link href="css/sticky-footer.css" rel="stylesheet">
-    <link href="css/content.css" rel="stylesheet">
+    <link href="css/bootstrap-override.css" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -39,9 +37,11 @@
         <div class="row">
             <div class="col-xs-4">
                 <img src="img/sascha.jpg" class="img-rounded img-responsive gap-right im" alt="Sascha">
+                <span class="text-muted">Sascha</span>
             </div>
             <div class="col-xs-4">
                 <img src="img/philipp.jpg" class="img-rounded img-responsive" alt="Philipp">
+                <span class="text-muted">Philipp</span>
             </div>
         </div>
     <!--picture grid end-->
