--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="css/navbar.css" rel="stylesheet">
-    <link href="css/sticky-footer.css" rel="stylesheet">
-    <link href="css/content.css" rel="stylesheet">
+    <link href="css/bootstrap-override.css" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
