--- a/scoreboard.html
+++ b/scoreboard.html
@@ -17,7 +17,7 @@
             <a class="navbar-brand" href="index.html">MalMal</a>
         </div>
         <ul class="nav navbar-nav">
-            <li ><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="malmal.html">MalMal</a></li>
             <li class="active"><a href="scoreboard.html">Scoreboard</a></li>
             <li><a href="submit-word.html">Wort einreichen</a></li>
@@ -27,7 +27,35 @@
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+<div class="container" style="max-width: 80%;">
+    <table class="table table-sm table-bordered table-hover">
+        <thead class="thead-inverse">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Score</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>100</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>32</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 <!--site content end-->
 
 <footer class="footer">
