fucked up bootstrap

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
 <!--Navigation bar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="index.html">MalMal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="malmal.html">MalMal</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="scoreboard.html">Scoreboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="submit-word.html">Wort einreichen</a>
             </li>
         </ul>
     </div>
@@ -37,19 +37,19 @@
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container">
+<div class="container-fluid site-content">
     <h3>Kerninformatiker&#8482</h3>
     <p>Das sind Sascha und Philipp, oder eben alle die mit uns zusammenarbeiten, denn wer sich Kerninformatiker
         nennen will muss ordentlich Lizenzgebühren blechen!</p>
     <br>
     <!--picture grid start-->
         <div class="row">
-            <div class="col-xs-4">
-                <img src="img/sascha.jpg" class="img-rounded img-responsive gap-right im" alt="Sascha">
+            <div class="col-md-auto flex-column">
+                <img src="img/sascha.jpg" class="rounded" alt="Sascha">
                 <span class="text-muted">Sascha</span>
             </div>
-            <div class="col-xs-4">
-                <img src="img/philipp.jpg" class="img-rounded img-responsive" alt="Philipp">
+            <div class="col-md-auto">
+                <img src="img/philipp.jpg" class="rounded" alt="Philipp">
                 <span class="text-muted">Philipp</span>
             </div>
         </div>
@@ -58,7 +58,7 @@
 <!--site content end-->
 
 <footer class="footer">
-    <div class="container">
+    <div class="container-fluid">
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
