--- a/scoreboard.html
+++ b/scoreboard.html
@@ -11,23 +11,32 @@
 </head>
 <body>
 <!--Navigation bar-->
-<nav class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">MalMal</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="malmal.html">MalMal</a></li>
-            <li class="active"><a href="scoreboard.html">Scoreboard</a></li>
-            <li><a href="submit-word.html">Wort einreichen</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">MalMal</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="malmal.html">MalMal</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="scoreboard.html">Scoreboard<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="submit-word.html">Wort einreichen</a>
+            </li>
         </ul>
     </div>
 </nav>
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container" style="max-width: 80%;">
+<div class="container-fluid site-content" style="max-width: 80%;">
     <table class="table table-sm table-bordered table-hover">
         <thead class="thead-inverse">
         <tr>
@@ -59,7 +68,7 @@
 <!--site content end-->
 
 <footer class="footer">
-    <div class="container">
+    <div class="container-fluid">
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
