--- a/submit-word.html
+++ b/submit-word.html
@@ -11,27 +11,36 @@
 </head>
 <body>
 <!--Navigation bar-->
-<nav class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">MalMal</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li ><a href="index.html">Home</a></li>
-            <li><a href="malmal.html">MalMal</a></li>
-            <li><a href="scoreboard.html">Scoreboard</a></li>
-            <li class="active"><a href="submit-word.html">Wort einreichen</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">MalMal</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="malmal.html">MalMal</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="scoreboard.html">Scoreboard</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="submit-word.html">Wort einreichen<span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </div>
 </nav>
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+<div class="container-fluid site-content">adasgfhgäpakhfgpäosjdfgdfonfsipgjofkäsdgldngfäsjg#fkälgdänsjg#kfdän</div>
 <!--site content end-->
 
 <footer class="footer">
-    <div class="container">
+    <div class="container-fluid">
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
