--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <br>
     <!--picture grid start-->
         <div class="row">
-            <div class="col-md-auto flex-column">
-                <img src="img/sascha.jpg" class="rounded" alt="Sascha">
+            <div class="col">
+                <img src="img/sascha.jpg" class="rounded" style="margin: 5px" alt="Sascha">
                 <span class="text-muted">Sascha</span>
             </div>
-            <div class="col-md-auto">
-                <img src="img/philipp.jpg" class="rounded" alt="Philipp">
+            <div class="col">
+                <img src="img/philipp.jpg" class="rounded" style="margin: 5px" alt="Philipp">
                 <span class="text-muted">Philipp</span>
             </div>
         </div>
