--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <!--picture grid start-->
         <div class="row">
             <div class="col">
-                <img src="img/sascha.jpg" class="rounded" style="margin: 5px" alt="Sascha">
+                <img src="img/sascha.jpg" class="rounded img-fluid" style="margin: 5px" alt="Sascha">
                 <span class="text-muted">Sascha</span>
             </div>
             <div class="col">
-                <img src="img/philipp.jpg" class="rounded" style="margin: 5px" alt="Philipp">
+                <img src="img/philipp.jpg" class="rounded img-fluid" style="margin: 5px" alt="Philipp">
                 <span class="text-muted">Philipp</span>
             </div>
         </div>
