--- a/submit-word.html
+++ b/submit-word.html
@@ -13,7 +13,8 @@
 <!--Navigation bar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">MalMal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -36,7 +37,18 @@
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container-fluid site-content">adasgfhgäpakhfgpäosjdfgdfonfsipgjofkäsdgldngfäsjg#fkälgdänsjg#kfdän</div>
+<div class="row">
+    <div class="col-md-2 offset-5 bg-dark" style="border-radius: 5px; margin-top: 100px">
+        <div class="form-group">
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="word" placeholder="Dein Wort" style="margin-top: 1rem">
+                </div>
+                <button type="submit" class="btn btn-primary" style="width: 100%">einreichen</button>
+            </form>
+        </div>
+    </div>
+</div>
 <!--site content end-->
 
 <footer class="footer">
