--- a/malmal.html
+++ b/malmal.html
@@ -8,6 +8,7 @@
     <link href="css/custom.css" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/site-scripts.js"></script>
 </head>
 <body>
 <!--Navigation bar-->
@@ -37,29 +38,16 @@
 <!--end of Navigation bar-->
 
 <!--site content start-->
-<div class="container-fluid site-content">
+<div class="container-fluid site-content" id="malmal-content">
     <div class="row">
         <div class="col-md-8">
-            <canvas id="drawCanvas">
+            <canvas id="drawCanvas" style="height: 70vh">
                 Sorry, your browser doesn't support the &lt;canvas&gt; element.
             </canvas>
-            <script>
-                var canvas = document.querySelector('canvas');
-                fitToContainer(canvas);
-
-                function fitToContainer(canvas) {
-                    // Make it visually fill the positioned parent
-                    canvas.style.width = '100%';
-                    canvas.style.height = '100%';
-                    // ...then set the internal size to match
-                    canvas.width = canvas.offsetWidth;
-                    canvas.height = canvas.offsetHeight;
-                }
-            </script>
         </div> <!-- /col-md-4 -->
         <div class="col-md-4 form-text">
             <form>
-                <div class="row">
+                <div class="row"style="height: 70vh">
                     <div class="col" style="margin-bottom: 5px; margin-top: -4px">
                         <textarea id="chatBox" readonly></textarea>
                     </div>
