--- a/scoreboard.html
+++ b/scoreboard.html
@@ -13,7 +13,8 @@
 <!--Navigation bar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">MalMal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,6 +35,10 @@
     </div>
 </nav>
 <!--end of Navigation bar-->
+
+<!--DEBUG BOX-->
+
+
 
 <!--site content start-->
 <div class="container-fluid site-content" style="max-width: 80%;">
