--- a/scoreboard.html
+++ b/scoreboard.html
@@ -8,6 +8,25 @@
     <link href="css/custom.css" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(function () { // short for $(document).ready
+            console.log("Running Code");
+
+            // get JSON object from backend
+            $.getJSON("http://backend.exesyst.com/highscore", function (data) {
+                console.log(data);
+                // for every item in data
+                var zaehler = 1;
+                $.each(data, function (name, data) {
+
+                    // append item to tbody of scoreTable
+                    $('#scoreTable tbody').append('<tr><td>' + zaehler++ + '</td><td>' + name + '</td><td>' + data + '</td></tr>');
+
+                });
+
+            });
+        });
+    </script>
 </head>
 <body>
 <!--Navigation bar-->
@@ -42,7 +61,7 @@
 
 <!--site content start-->
 <div class="container-fluid site-content" style="max-width: 80%;">
-    <table class="table table-sm table-bordered table-hover">
+    <table id="scoreTable" class="table table-sm table-bordered table-hover">
         <thead class="thead-inverse">
         <tr>
             <th scope="col">#</th>
@@ -51,21 +70,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>100</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>50</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>32</td>
-        </tr>
+            <!--Highscore Table Here-->
         </tbody>
     </table>
 </div>
@@ -77,5 +82,6 @@
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
+
 </body>
 </html>
