--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="css/custom.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 
 <!--Navigation bar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">MalMal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,16 +48,16 @@
         nennen will muss ordentlich Lizenzgebühren blechen!</p>
     <br>
     <!--picture grid start-->
-        <div class="row">
-            <div class="col">
-                <img src="img/sascha.jpg" class="rounded img-fluid" style="margin: 5px" alt="Sascha">
-                <span class="text-muted">Sascha</span>
-            </div>
-            <div class="col">
-                <img src="img/philipp.jpg" class="rounded img-fluid" style="margin: 5px" alt="Philipp">
-                <span class="text-muted">Philipp</span>
-            </div>
+    <div class="row">
+        <div class="col">
+            <img src="img/sascha.jpg" class="rounded img-fluid" style="margin: 5px" alt="Sascha">
+            <span class="text-muted">Sascha</span>
         </div>
+        <div class="col">
+            <img src="img/philipp.jpg" class="rounded img-fluid" style="margin: 5px" alt="Philipp">
+            <span class="text-muted">Philipp</span>
+        </div>
+    </div>
     <!--picture grid end-->
 </div>
 <!--site content end-->
