--- a/scoreboard.html
+++ b/scoreboard.html
@@ -4,10 +4,14 @@
     <title>Scoreboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="css/custom.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
     <script>
         $(function () { // short for $(document).ready
             console.log("Running Code");
@@ -19,7 +23,7 @@
                 $.each(data.highscore, function (index, data) {
 
                     // append item to tbody of scoreTable
-                    $('#scoreTable tbody').append('<tr><td>' + (index+1) + '</td><td>' + data[0] + '</td><td>' + data[1] + '</td></tr>');
+                    $('#scoreTable tbody').append('<tr><td>' + (index + 1) + '</td><td>' + data[0] + '</td><td>' + data[1] + '</td></tr>');
 
                 });
 
@@ -57,7 +61,6 @@
 <!--DEBUG BOX-->
 
 
-
 <!--site content start-->
 <div class="container-fluid site-content" style="max-width: 80%;">
     <table id="scoreTable" class="table table-sm table-bordered table-hover">
@@ -69,7 +72,7 @@
         </tr>
         </thead>
         <tbody>
-            <!--Highscore Table Here-->
+        <!--Highscore Table Here-->
         </tbody>
     </table>
 </div>
