--- a/malmal.html
+++ b/malmal.html
@@ -12,6 +12,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
             integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
             crossorigin="anonymous"></script>
+    <script src="nodejs/node_modules/socket.io-client/dist/socket.io.js"></script>
+    <script src="js/client.js"></script>
+    <script src="js/site-scripts.js"></script>
 </head>
 <body>
 <!--Navigation bar-->
@@ -44,7 +47,7 @@
 <div class="container-fluid site-content" id="malmal-content">
     <div class="row">
         <div class="col-md-8">
-            <canvas id="drawCanvas" style="height: 70vh">
+            <canvas id="drawCanvas" class="whiteboard" style="height: 70vh">
                 Sorry, your browser doesn't support the &lt;canvas&gt; element.
             </canvas>
         </div> <!-- /col-md-4 -->
@@ -80,8 +83,5 @@
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
-<script src="/nodejs/node_modules/socket.io-client/dist/socket.io.js"></script>
-<script src="/js/client.js"></script>
-<script src="/js/site-scripts.js"></script>
 </body>
 </html>
