--- a/submit-word.html
+++ b/submit-word.html
@@ -36,7 +36,7 @@
                 },
                 processData: false,
                 type: 'PUT',
-                url: 'http://localhost/add-word'
+                url: 'http://localhost:3000/add-word'
             });
         };
     </script>
