--- a/malmal.html
+++ b/malmal.html
@@ -92,7 +92,7 @@
                     <input type="text" class="form-control" id="gameTimer" readonly>
                 </div>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" id="currentWord" readonly>
+                    <input type="text" class="form-control" id="instructionBox" readonly>
                 </div>
             </div>
         </div>
