--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
     <div class="row">
         <div class="col">
             <img src="img/sascha.jpg" class="rounded img-fluid" style="margin: 5px" alt="Sascha">
-            <span class="text-muted">Sascha</span>
         </div>
         <div class="col">
             <img src="img/philipp.jpg" class="rounded img-fluid" style="margin: 5px" alt="Philipp">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <span class="text-muted">Sascha</span>
+        </div>
+        <div class="col">
             <span class="text-muted">Philipp</span>
         </div>
     </div>
