--- a/malmal.html
+++ b/malmal.html
@@ -69,7 +69,7 @@
     <div class="row">
         <div class="col-md-8" id="canvasParent">
             <canvas id="drawCanvas" class="whiteboard">
-                Sorry, your browser doesn't support the &lt;canvas&gt; element.
+                Sorry, your browser doesn't support the canvas element.
             </canvas>
         </div>
         <div class="col-md-4">
@@ -108,8 +108,8 @@
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
-
 <script>
+    // Modal popup for username input
     $(document).ready(function () {
         $('#usernameModal').modal('show');
     });
